--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple demo counter using Redis",
   "main": "index.js",
   "scripts": {
-    "test": "mocha index.test.js"
+    "test": "mocha index.test.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
