--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha index.test.js",
-    "build": "tsc index.js"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
