--- a/webpack.yml
+++ b/webpack.yml
@@ -1,28 +1,16 @@
-name: NodeJS with Webpack
-
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
+    inputs:
+      create_resource_group:
+        description: 'Whether to create RG'
+        required: false
+        type: boolean
 
 jobs:
-  build:
+  log-the-inputs:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Build
-      run: |
-        npm install
-        npx webpack
+      - run: |
+          echo "Create RG: $CRG"
+        env:
+          CRG: ${{ inputs.create_resource_group }}
